generate batch of prompts for additional multiturn interaction dataset

--- a/scripts/Worksheet.ipynb
+++ b/scripts/Worksheet.ipynb
@@ -2,16 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Infants', 'Infants']"
+       "['Elderly',\n",
+       " 'Centenarians',\n",
+       " 'Older Adults',\n",
+       " 'Preschoolers',\n",
+       " 'Toddlers',\n",
+       " 'School-age Children',\n",
+       " 'Infants',\n",
+       " 'Adolescents',\n",
+       " 'Infants',\n",
+       " 'Adolescents',\n",
+       " 'Adults',\n",
+       " 'Middle-aged Adults',\n",
+       " 'Older Adults',\n",
+       " 'Elderly',\n",
+       " 'Elderly',\n",
+       " 'Elderly',\n",
+       " 'Elderly',\n",
+       " 'Preschoolers',\n",
+       " 'Infants',\n",
+       " 'School-age Children',\n",
+       " 'Young Adults',\n",
+       " 'Infants',\n",
+       " 'School-age Children',\n",
+       " 'Adults',\n",
+       " 'Centenarians',\n",
+       " 'Young Adults',\n",
+       " 'Infants',\n",
+       " 'Toddlers',\n",
+       " 'Preschoolers',\n",
+       " 'Middle-aged Adults']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,31 +53,28 @@
     "with open(age_ranges_file, 'r') as file:\n",
     "    age_ranges = json.load(file)  # Load JSON data from file\n",
     "ages = [dict[\"category\"] for dict in age_ranges]\n",
-    "random.choices(ages, k=2)"
+    "random.choices(ages, k=30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "High-income\n",
-      "Low-income\n",
-      "Lower middle income\n",
-      "Upper middle income\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['India', 'Ethiopia']"
+       "['Oman',\n",
+       " 'Greece',\n",
+       " 'Uganda',\n",
+       " 'Ethiopia',\n",
+       " 'Uzbekistan',\n",
+       " 'El Salvador',\n",
+       " 'Thailand',\n",
+       " 'Mauritius']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,8 +94,8 @@
     "# Step 3: Randomly sample one country from two different categories\n",
     "sampled_countries = []\n",
     "for category, group in groups:\n",
-    "    sampled_countries.append(group.sample(n=1))\n",
-    "sampled_countries_df = pd.concat(sampled_countries).reset_index(drop=True).sample(2)\n",
+    "    sampled_countries.append(group.sample(n=2))\n",
+    "sampled_countries_df = pd.concat(sampled_countries).reset_index(drop=True)\n",
     "sampled_countries_df[\"Country\"].to_list()"
    ]
   },
