--- a/scripts/interact_with_gpt.ipynb
+++ b/scripts/interact_with_gpt.ipynb
@@ -1,21 +1,22 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Part 1 - Test prompts"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "from tqdm import tqdm\n",
-    "from openai import OpenAI"
+    "from openai import OpenAI\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1 - Test prompts"
    ]
   },
   {
@@ -382,6 +383,122 @@
     "    json.dump(parsed_output, file, indent=4)\n",
     "\n",
     "print(f\"Data successfully written to {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 3 -> Test prompts from batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "System Content:\n",
+      "You are an assistant responsible for creating prompts that healthcare workers would ask a medical AI chatbot.\n",
+      "\n",
+      "User Content:\n",
+      "Generate 1 different prompts that a Speech-Language Pathologist specializing in Fluency Disorders might ask an AI chatbot when tasked with Diagnosing Symptoms .\n",
+      "Diagnosing Symptoms is described as: Assisting in diagnosing patient symptoms based on medical history and presenting issues.\n",
+      "To create a realistic prompt, follow these additional instructions: Generate a realistic medical history and presenting issues for a patient, and base your question on the generated case.\n",
+      "The first question you generate has to be about a patient seeing a Speech-Language Pathologist in Burundi. The patient has the following demographic attributes:\n",
+      "age range: School-age Children (6 to 12 years old)\n",
+      "sex: Male\n",
+      "gender: Cisgender Male\n",
+      "Only include the generated prompts, adding extra details only if specified. Focus solely on the realistic prompts the health care workers working in the specified countries might ask a medical AI chatbot.\n",
+      "Separate each prompt you generate in the output by ###\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Load the .jsonl file\n",
+    "def load_jsonl(file_path):\n",
+    "    with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "        return [json.loads(line) for line in file]\n",
+    "\n",
+    "# Randomly sample an entry and extract system and user content\n",
+    "def sample_entry(jsonl_data):\n",
+    "    sampled_entry = random.choice(jsonl_data)\n",
+    "    system_content = None\n",
+    "    user_content = None\n",
+    "\n",
+    "    # Extract the system and user content\n",
+    "    messages = sampled_entry.get(\"body\", {}).get(\"messages\", [])\n",
+    "    for message in messages:\n",
+    "        if message[\"role\"] == \"system\":\n",
+    "            system_content = message[\"content\"]\n",
+    "        elif message[\"role\"] == \"user\":\n",
+    "            user_content = message[\"content\"]\n",
+    "\n",
+    "    return system_content, user_content\n",
+    "\n",
+    "# Path to the .jsonl file\n",
+    "file_path = \"../results/batched_prompts_task_x_specialties_x_demographic.jsonl\"\n",
+    "\n",
+    "# Load the data\n",
+    "jsonl_data = load_jsonl(file_path)\n",
+    "\n",
+    "# Sample an entry and extract the content\n",
+    "system_content, user_content = sample_entry(jsonl_data)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"System Content:\")\n",
+    "print(system_content)\n",
+    "print(\"\\nUser Content:\")\n",
+    "print(user_content)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Send prompt to GPT:\n",
+      "Receiving responses from GPT...\n",
+      "What might be the underlying causes and recommended interventions for an 8-year-old boy in Burundi who has been exhibiting frequent repetitions of sounds and syllables when speaking, combined with visible signs of tension in his facial muscles during speech and a family history of stuttering on his father's side? Additionally, he seems anxious during speaking situations at school. How might cultural and linguistic factors specific to Burundi be considered in his diagnosis and treatment plan?\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test version of interacting with the openai API\n",
+    "# Generates only 1 output and prints it\n",
+    "\n",
+    "path_to_api_key: str = \"../API_KEY.txt\"\n",
+    "my_api_key = open(path_to_api_key, 'r').read()\n",
+    "client = OpenAI(api_key=my_api_key)\n",
+    "gpt_model: str = \"gpt-4o\"\n",
+    "content = system_content\n",
+    "prompt = user_content\n",
+    "\n",
+    "\n",
+    "print(\"Send prompt to GPT:\")\n",
+    "\n",
+    "completion = client.chat.completions.create(\n",
+    "    model= gpt_model,\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": content},\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": f\"{prompt}\"\n",
+    "        }\n",
+    "    ]\n",
+    ")\n",
+    "print(\"Receiving responses from GPT...\")\n",
+    "print(completion.choices[0].message.content)"
    ]
   }
  ],
