additional prompts generated

--- a/scripts/generate_batch_additional_batch_of_prompts.ipynb
+++ b/scripts/generate_batch_additional_batch_of_prompts.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [00:03<00:00,  3.91it/s]"
+      "100%|██████████| 13/13 [00:03<00:00,  3.26it/s]"
      ]
     },
     {
@@ -104,7 +104,7 @@
     "print(f\"that can be processed by {gpt_model} in batch mode\")\n",
     "\n",
     "content = \"You are an assistant responsible for creating prompts that healthcare workers would ask a medical AI chatbot.\"\n",
-    "nbr_of_questions_per_category = 1\n",
+    "nbr_of_questions_per_category = 4\n",
     "id = 0\n",
     "with open(output_path, 'w') as file:\n",
     "    for medical_ai_task in tqdm(medical_ai_tasks):\n",
@@ -130,7 +130,7 @@
     "            demographics = helper.get_demographics(countries_df=countries_df, age_categories=age_categories,\n",
     "                                                    sex_and_gender=sex_and_gender, nbr_samples=nbr_of_questions_per_category)\n",
     "            prompt = helper.get_prompt(nbr_of_questions=nbr_of_questions_per_category, task=task, description=description,\n",
-    "                                       additional_instruction=add_instruction, demographics=demographics, profession=profession)\n",
+    "                                       additional_instruction=add_instruction, demographics=demographics, profession=profession[\"profession\"])\n",
     "            countries_used = \",\".join([dict[\"country\"] for dict in demographics])\n",
     "            prompt_id = str(id) + \"-\" + countries_used\n",
     "            line = helper.fill_line(prompt_id=prompt_id, gpt_model=gpt_model, content=content,\n",
@@ -140,9 +140,9 @@
     "        for topic in topics_data:\n",
     "            demographics = helper.get_demographics(countries_df=countries_df, age_categories=age_categories,\n",
     "                                                    sex_and_gender=sex_and_gender, nbr_samples=nbr_of_questions_per_category,\n",
-    "                                                    medical_topic=topic)\n",
+    "                                                    medical_topic=topic[\"topic\"])\n",
     "            prompt = helper.get_prompt(nbr_of_questions=nbr_of_questions_per_category, task=task, description=description,\n",
-    "                                       additional_instruction=add_instruction, demographics=demographics, topic=topic)\n",
+    "                                       additional_instruction=add_instruction, demographics=demographics, topic=topic[\"topic\"])\n",
     "            countries_used = \",\".join([dict[\"country\"] for dict in demographics])\n",
     "            prompt_id = str(id) + \"-\" + countries_used\n",
     "            line = helper.fill_line(prompt_id=prompt_id, gpt_model=gpt_model, content=content,\n",
