--- a/scripts/gpt_bacht_mode.ipynb
+++ b/scripts/gpt_bacht_mode.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of entries: 3400\n"
+      "Number of entries: 2587\n"
      ]
     }
    ],
@@ -41,10 +41,8 @@
     "# Load file of batched prompts and check if it is the correct file:\n",
     "\n",
     "# Define the file path\n",
-    "situations_name = \"tasks_x_subtopics\"\n",
-    "turn = 3\n",
-    "system = \"c\"\n",
-    "file_path = \"../results/batched_prompts_\" + situations_name + \"_turn_\" + str(turn) + system + \".jsonl\"\n",
+    "situations_name = \"batched_prompts_task_x_specialties_x_demographic\"\n",
+    "file_path = \"../results/\" + situations_name + \".jsonl\"\n",
     "\n",
     "# Initialize a counter\n",
     "count = 0\n",
@@ -69,7 +67,7 @@
       "Connecting to openai\n",
       "Creating batch file\n",
       "Batch file successfully created\n",
-      "FileObject(id='file-UeyzepsQq56tMh8wSgbWQKL1', bytes=18723455, created_at=1732017451, filename='batched_prompts_tasks_x_subtopics_turn_3c.jsonl', object='file', purpose='batch', status='processed', status_details=None)\n",
+      "FileObject(id='file-HawpA2mNtxovzZx2ZHUZ91', bytes=5447083, created_at=1733868289, filename='batched_prompts_task_x_specialties_x_demographic.jsonl', object='file', purpose='batch', status='processed', status_details=None)\n",
       "Launch batch\n",
       "Batch successfully launched\n",
       "Batch id saved to ../results/batch_id.txt and batch object saved to ../results/batch.txt\n"
@@ -80,19 +78,19 @@
     "# Launch batch job\n",
     "# Decomment line below to run job using openai API in batch mode\n",
     "# WILL COST MONEY\n",
-    "# script.process_batch_by_gpt(path_to_batched_prompts = file_path, description=f\"generate multiturn interactions for medical instruction tuning {situations_name}, turn: {str(turn)} {system}\")"
+    "# script.process_batch_by_gpt(path_to_batched_prompts = file_path, description=f\"generate prompts for multiturn interactions for medical instruction tuning, case: task_x_specialties_x_demographic\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch(id='batch_673c7d2cfacc8190b8e6170babe91ceb', completion_window='24h', created_at=1732017453, endpoint='/v1/chat/completions', input_file_id='file-UeyzepsQq56tMh8wSgbWQKL1', object='batch', status='completed', cancelled_at=None, cancelling_at=None, completed_at=1732018804, error_file_id=None, errors=None, expired_at=None, expires_at=1732103853, failed_at=None, finalizing_at=1732018598, in_progress_at=1732017454, metadata={'description': 'generate multiturn interactions for medical instruction tuning tasks_x_subtopics, turn: 3 c'}, output_file_id='file-F1o1wEapSN41KomQgCBwyIJv', request_counts=BatchRequestCounts(completed=3400, failed=0, total=3400))\n",
+      "Batch(id='batch_6758bb02e9bc8191ae1ffbd2f760c250', completion_window='24h', created_at=1733868291, endpoint='/v1/chat/completions', input_file_id='file-HawpA2mNtxovzZx2ZHUZ91', object='batch', status='completed', cancelled_at=None, cancelling_at=None, completed_at=1733869252, error_file_id=None, errors=None, expired_at=None, expires_at=1733954691, failed_at=None, finalizing_at=1733869026, in_progress_at=1733868292, metadata={'description': 'generate prompts for multiturn interactions for medical instruction tuning, case: task_x_specialties_x_demographic'}, output_file_id='file-LBx92i8JCe12hrJAUkXGQz', request_counts=BatchRequestCounts(completed=2587, failed=0, total=2587))\n",
       "status = completed\n"
      ]
     }
@@ -104,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
