--- a/scripts/interact_with_gpt.ipynb
+++ b/scripts/interact_with_gpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,30 +394,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "System Content:\n",
-      "You are an assistant responsible for creating prompts that healthcare workers would ask a medical AI chatbot.\n",
-      "\n",
-      "User Content:\n",
-      "Generate 1 different prompts that a Speech-Language Pathologist specializing in Fluency Disorders might ask an AI chatbot when tasked with Diagnosing Symptoms .\n",
-      "Diagnosing Symptoms is described as: Assisting in diagnosing patient symptoms based on medical history and presenting issues.\n",
-      "To create a realistic prompt, follow these additional instructions: Generate a realistic medical history and presenting issues for a patient, and base your question on the generated case.\n",
-      "The first question you generate has to be about a patient seeing a Speech-Language Pathologist in Burundi. The patient has the following demographic attributes:\n",
-      "age range: School-age Children (6 to 12 years old)\n",
-      "sex: Male\n",
-      "gender: Cisgender Male\n",
-      "Only include the generated prompts, adding extra details only if specified. Focus solely on the realistic prompts the health care workers working in the specified countries might ask a medical AI chatbot.\n",
-      "Separate each prompt you generate in the output by ###\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -440,8 +419,49 @@
     "        elif message[\"role\"] == \"user\":\n",
     "            user_content = message[\"content\"]\n",
     "\n",
-    "    return system_content, user_content\n",
-    "\n",
+    "    return system_content, user_content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "System Content:\n",
+      "You are an assistant responsible for creating prompts that healthcare workers would ask a medical AI chatbot.\n",
+      "\n",
+      "User Content:\n",
+      "Generate 4 different and detailed prompts that a Physician specializing in Nephrology might ask an AI chatbot when tasked with Medication Management.\n",
+      "Medication Management is described as: Assisting with dosage calculations.\n",
+      "To create a realistic prompt, follow these additional instructions: Generate a brief example describing a case where a doctor has prescribed multiple medications to a patient.\n",
+      "The first question you generate has to be about a patient seeing a Physician in Costa Rica. The patient has the following demographic attributes:\n",
+      "age range: Middle-aged Adults (41 to 60 years old)\n",
+      "sex: Male\n",
+      "gender: Cisgender Male\n",
+      "The second question you generate has to be about a patient seeing a Physician in Iceland. The patient has the following demographic attributes:\n",
+      "age range: Older Adults (61 to 75 years old)\n",
+      "sex: Female\n",
+      "gender: Cisgender Female\n",
+      "The third question you generate has to be about a patient seeing a Physician in Haiti. The patient has the following demographic attributes:\n",
+      "age range: Adults (26 to 40 years old)\n",
+      "sex: Female\n",
+      "gender: Cisgender Female\n",
+      "The fourth question you generate has to be about a patient seeing a Physician in Yemen. The patient has the following demographic attributes:\n",
+      "age range: Elderly (76 to 90 years old)\n",
+      "sex: Female\n",
+      "gender: Cisgender Female\n",
+      "Only mention the gender identity if it is relevant and necessary for the question you generate.\n",
+      "Only include the generated prompts, adding extra details only if specified. Focus solely on the realistic prompts the health care workers working in the specified countries might ask a medical AI chatbot.\n",
+      "Separate each prompt you generate in the output by ###\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "# Path to the .jsonl file\n",
     "file_path = \"../results/batched_prompts_task_x_specialties_x_demographic.jsonl\"\n",
     "\n",
@@ -460,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +489,19 @@
      "text": [
       "Send prompt to GPT:\n",
       "Receiving responses from GPT...\n",
-      "What might be the underlying causes and recommended interventions for an 8-year-old boy in Burundi who has been exhibiting frequent repetitions of sounds and syllables when speaking, combined with visible signs of tension in his facial muscles during speech and a family history of stuttering on his father's side? Additionally, he seems anxious during speaking situations at school. How might cultural and linguistic factors specific to Burundi be considered in his diagnosis and treatment plan?\n"
+      "1. A middle-aged male patient in Costa Rica has been diagnosed with hypertension and type 2 diabetes. He is currently prescribed lisinopril, metformin, and atorvastatin. The patient's renal function is slightly compromised, with an eGFR of 55 mL/min/1.73 m². Can you assist with adjusting the dosages of these medications to safely manage his conditions without further impairing renal function?\n",
+      "\n",
+      "###\n",
+      "\n",
+      "2. An older female patient in Iceland is being managed for chronic kidney disease and heart failure. Her current medication regimen includes atenolol, furosemide, and losartan. Given her decreasing renal function and recent lab tests showing an eGFR of 45 mL/min/1.73 m², how should we adjust these medications to optimize therapeutic efficacy while minimizing risk? \n",
+      "\n",
+      "###\n",
+      "\n",
+      "3. A young adult female patient in Haiti with a history of recurrent urinary tract infections and mild hypertension is taking nitrofurantoin and amlodipine. Her current eGFR is 70 mL/min/1.73 m². Could you provide guidance on the appropriate dosing of these medications to ensure effectiveness without compromising renal health?\n",
+      "\n",
+      "###\n",
+      "\n",
+      "4. An elderly female patient in Yemen with stage 4 chronic kidney disease and anemia is currently on a medication regimen that includes epoetin alfa, calcium acetate, and carvedilol. Her latest eGFR is 22 mL/min/1.73 m². What adjustments to her medication dosages would you recommend to manage her conditions effectively in light of her compromised renal status?\n"
      ]
     }
    ],
