better additional prompts are in tasx x specialty x demographics _2

--- a/scripts/interact_with_gpt.ipynb
+++ b/scripts/interact_with_gpt.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -435,26 +435,24 @@
       "You are an assistant responsible for creating prompts that healthcare workers would ask a medical AI chatbot.\n",
       "\n",
       "User Content:\n",
-      "Generate 4 different and detailed prompts that a Physician specializing in Nephrology might ask an AI chatbot when tasked with Medication Management.\n",
-      "Medication Management is described as: Assisting with dosage calculations.\n",
-      "To create a realistic prompt, follow these additional instructions: Generate a brief example describing a case where a doctor has prescribed multiple medications to a patient.\n",
-      "The first question you generate has to be about a patient seeing a Physician in Costa Rica. The patient has the following demographic attributes:\n",
-      "age range: Middle-aged Adults (41 to 60 years old)\n",
+      "Generate 4 different and detailed prompts that a Medical Social Worker might ask an AI chatbot when tasked with Diagnosing Symptoms.\n",
+      "Diagnosing Symptoms is described as: Assisting in diagnosing patient symptoms based on medical history and presenting issues.\n",
+      "To create a realistic prompt, follow these additional instructions: Generate a realistic medical history and presenting issues for a patient, and base your question on the generated case.\n",
+      "The first question you generate has to be about a patient seeing a Medical Social Worker in Burkina Faso. The patient has the following demographic attributes:\n",
+      "age range: School-age Children (6 to 12 years old)\n",
       "sex: Male\n",
-      "gender: Cisgender Male\n",
-      "The second question you generate has to be about a patient seeing a Physician in Iceland. The patient has the following demographic attributes:\n",
+      "The second question you generate has to be about a patient seeing a Medical Social Worker in Taiwan. The patient has the following demographic attributes:\n",
       "age range: Older Adults (61 to 75 years old)\n",
       "sex: Female\n",
-      "gender: Cisgender Female\n",
-      "The third question you generate has to be about a patient seeing a Physician in Haiti. The patient has the following demographic attributes:\n",
-      "age range: Adults (26 to 40 years old)\n",
-      "sex: Female\n",
-      "gender: Cisgender Female\n",
-      "The fourth question you generate has to be about a patient seeing a Physician in Yemen. The patient has the following demographic attributes:\n",
+      "gender identity: Cisgender Female\n",
+      "The third question you generate has to be about a patient seeing a Medical Social Worker in Jamaica. The patient has the following demographic attributes:\n",
+      "age range: Toddlers (1 to 3 years old)\n",
+      "sex: Male\n",
+      "The fourth question you generate has to be about a patient seeing a Medical Social Worker in Philippines. The patient has the following demographic attributes:\n",
       "age range: Elderly (76 to 90 years old)\n",
-      "sex: Female\n",
-      "gender: Cisgender Female\n",
-      "Only mention the gender identity if it is relevant and necessary for the question you generate.\n",
+      "sex: Male\n",
+      "gender identity: Cisgender Male\n",
+      "Mention the gender identity in the question you generate only if it is directly relevant and necessary for the medical context; it should not be mentioned otherwise.\n",
       "Only include the generated prompts, adding extra details only if specified. Focus solely on the realistic prompts the health care workers working in the specified countries might ask a medical AI chatbot.\n",
       "Separate each prompt you generate in the output by ###\n",
       "\n"
@@ -463,7 +461,7 @@
    ],
    "source": [
     "# Path to the .jsonl file\n",
-    "file_path = \"../results/batched_prompts_task_x_specialties_x_demographic.jsonl\"\n",
+    "file_path = \"../results/batched_prompts_task_x_specialties_x_demographic_2.jsonl\"\n",
     "\n",
     "# Load the data\n",
     "jsonl_data = load_jsonl(file_path)\n",
@@ -480,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -489,19 +487,17 @@
      "text": [
       "Send prompt to GPT:\n",
       "Receiving responses from GPT...\n",
-      "1. A middle-aged male patient in Costa Rica has been diagnosed with hypertension and type 2 diabetes. He is currently prescribed lisinopril, metformin, and atorvastatin. The patient's renal function is slightly compromised, with an eGFR of 55 mL/min/1.73 m². Can you assist with adjusting the dosages of these medications to safely manage his conditions without further impairing renal function?\n",
+      "###  \n",
+      "A young male patient aged 8 has come into our primary health center in Burkina Faso. His parents report that he has been experiencing frequent stomachaches, occasionally accompanied by diarrhea, over the past two weeks. He also seems to be more fatigued than usual and has missed a couple of school days due to feeling unwell. The family lives in an area known for poor water quality, and the child’s medical history includes a previous episode of amoebiasis treated last year. Based on these details, what potential diagnosis should be considered and how should his symptoms be managed?\n",
       "\n",
-      "###\n",
+      "###  \n",
+      "I am working with a 67-year-old female patient in Taiwan who reports experiencing intermittent dizziness and a feeling of unsteadiness for the past month. She has a history of hypertension, managed with medication, and recently mentioned experiencing some ear pressure and mild tinnitus. Additionally, she has noticed a slight decline in hearing in her right ear. Her family history includes cases of Meniere's disease. Given these aspects, what would be a suitable diagnosis approach and management plan?\n",
       "\n",
-      "2. An older female patient in Iceland is being managed for chronic kidney disease and heart failure. Her current medication regimen includes atenolol, furosemide, and losartan. Given her decreasing renal function and recent lab tests showing an eGFR of 45 mL/min/1.73 m², how should we adjust these medications to optimize therapeutic efficacy while minimizing risk? \n",
+      "###  \n",
+      "We have a male toddler, age 2, who has presented to our clinic in Jamaica with a high fever and rash that began with red spots and has now spread to form larger patches. His mother mentions he seemed unusually fussy and had decreased appetite over the past few days. He has no known allergies, but he did not receive his recent scheduled MMR vaccine due to a mild cold at that time. Considering his symptoms and history, what should be our course of action to accurately diagnose and treat his condition?\n",
       "\n",
-      "###\n",
-      "\n",
-      "3. A young adult female patient in Haiti with a history of recurrent urinary tract infections and mild hypertension is taking nitrofurantoin and amlodipine. Her current eGFR is 70 mL/min/1.73 m². Could you provide guidance on the appropriate dosing of these medications to ensure effectiveness without compromising renal health?\n",
-      "\n",
-      "###\n",
-      "\n",
-      "4. An elderly female patient in Yemen with stage 4 chronic kidney disease and anemia is currently on a medication regimen that includes epoetin alfa, calcium acetate, and carvedilol. Her latest eGFR is 22 mL/min/1.73 m². What adjustments to her medication dosages would you recommend to manage her conditions effectively in light of her compromised renal status?\n"
+      "###  \n",
+      "An 82-year-old male patient in the Philippines has been experiencing increasing shortness of breath and fatigue over the last month. He has a history of chronic obstructive pulmonary disease (COPD) and takes regular medication for it. He also mentions swelling in his ankles and occasional palpitations. He lives in a rural area with limited access to immediate healthcare. Considering these factors, what potential respiratory or cardiovascular issues should be explored, and what steps should be taken to provide him with appropriate care?\n"
      ]
     }
    ],
